--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,6 @@
 .banner {
     
-    background-image: url(/assets/images/Banner.jpg);
+    background-image: url(./assets/images/Banner.jpg);
 
 }
 
